phpAdsNew - ChangeLog
			+ Bugfix : Home wasn't translated in the client view (Cedric)
			+ Added the preferences for client(Cedric)
			+ Added two extra banner retrieval methods (Niels)
			+ Added the no stats for this banner message in the client stats (Cedric)
			+ Translate No expiration date set also (Cedric)
			+ Bugfix: weekly stats didn't work correctly with multiple banners client (Cedric thanks to Niels)
			+ Bugfix: removed "Reset Statistics" button from the client interface (Niels)
v 1.9.2 - 08/03/2001
			+ Removed config2.inc.php (Phil)
			+ Bugfix: removed hourly graph for compact statistics (Niels)
			+ Bugfix: client statistics is working again, no more SQL errors (Niels)
			+ Bugfix: improved detection of GD availability for PHP4 (Niels)
			+ Bugfix: removed GD dependancy for weekly stats, no more broken image (Niels)
			+ Bugfix: removed PHP4 dependancy for Remove invocation with Javascript (Niels)
			+ Bugfix: implemented workaround for IE bug in the admin pages (Niels)
			+ Bugfix: sequential banner retrieval did not work (Niels)
			+ Bugfix: target was not recognized (Niels)
			+ Bugfix: client ID, was reset to 0 (Niels)
			+ Bugfix: Detailed statistics were empty after adding an ACL to a banner (Niels)
			+ Bugfix: SQL error after resetting statistics (Niels, Phil)
			+ Bugfix: bad include path (Phil)
			+ Bugfix: mail.php disable wrong clients (Cedric)
			+ Translate french version (Cedric)
v 1.9.1 - 02/03/2001    
			+ BugFix: typo in dailystats.inc.php (Phil)
			+ Bugfix: "when" is a reserved word in mysql?  Who knew?  (Phil)
			+ Fix for PHP3 compatibility in expiration.inc.php (Phil, others)
v 1.9.0 - 01/03/2001    + Several bugfixes (Phil)
                        + Changed banneradd.php layout for IE ONLY (with javascript and <DIV>s) (Phil)
                        + Added db_query() function to assist debugging mysql errors
                        + Added description field in the database for future use (Phil)